--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -1,17 +1,3 @@
 [workspace]
-members = [
-  "agent-template",
-  "wasm-crate"
-]
+members = ["host", "plugin"]
 resolver = "2"
-
-[profile.release]
-opt-level = 3
-lto = true
-codegen-units = 1
-strip = true
-
-[profile.dev]
-opt-level = 0
-debug = true
-
