--- a/agent/host/Cargo.toml
+++ b/agent/host/Cargo.toml
@@ -11,4 +11,4 @@ anyhow = "1.0"
 futures = "0.3"
 serde_json = "1.0"
 thiserror = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }wasmtime = "15"
