--- a/agent/host/Cargo.toml
+++ b/agent/host/Cargo.toml
@@ -11,5 +11,6 @@ anyhow = "1.0"
 futures = "0.3"
 serde_json = "1.0"
 thiserror = "1.0"
-serde = { version = "1.0", features = ["derive"] }wasmtime = "15"
+serde = { version = "1.0", features = ["derive"] }
+wasmtime = "15"
 wasmtime = "15"
