ci: remove extra workflows and auto-detect WASM crates (no agent-template hardcode)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,16 +28,40 @@ jobs:
       - name: Build WASM (auto-detect cdylib crates)
         shell: bash
         run: |
-          set -e
+          set -euo pipefail
           rustup target add wasm32-unknown-unknown
           found=0
           while IFS= read -r manifest; do
             if grep -q "^\[lib\]" "$manifest" && grep -iq "crate-type.*cdylib" "$manifest"; then
               pkg=$(grep -m1 '^name[[:space:]]*=' "$manifest" | sed -E 's/.*name[[:space:]]*=[[:space:]]*"([^"]+)".*/\1/')
               [ -z "$pkg" ] && pkg=$(basename "$(dirname "$manifest")")
-              echo "==> Building $pkg (WASM)"
+              echo "==> Building $pkg (WASM) from $manifest"
               cargo build -p "$pkg" --target wasm32-unknown-unknown --release
               found=1
             fi
           done < <(find . -name Cargo.toml)
           [ "$found" = 0 ] && echo "No cdylib crates found; skipping."
+
+      - name: Setup Node
+        if: ${{ hashFiles('**/package.json') != '' }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Cache Node
+        if: ${{ hashFiles('**/package.json') != '' }}
+        uses: actions/cache@v4
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json', '**/pnpm-lock.yaml', '**/yarn.lock') }}
+          restore-keys: ${{ runner.os }}-node-
+
+      - name: Install deps (Node)
+        if: ${{ hashFiles('**/package.json') != '' }}
+        run: |
+          if [ -f package-lock.json ]; then npm ci; else npm i; fi
+
+      - name: Lint (JS)
+        if: ${{ hashFiles('**/.eslintrc*') != '' }}
+        run: npx eslint . || true
