--- a/agent/host/Cargo.toml
+++ b/agent/host/Cargo.toml
@@ -1,15 +1,8 @@
 [package]
-name = "wasm-host"
+name = "wasm_host"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-wasmi = "0.31"
-tokio = { version = "1.0", features = ["full"] }
-reqwest = "0.11"
-anyhow = "1.0"
-futures = "0.3"
-serde_json = "1.0"
-thiserror = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-wasmtime = "15"
+anyhow = "1"
+log = "0.4"
